# axum-server-template

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: config.rs  lib.rs  main.rs  router.rs  tracing.rs
tests/: router.rs
tests/api/: client.rs  helper.rs  main.rs  router.rs
tests/helper/: mod.rs
