[package]
name = "axum-server-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["multipart"] }
config = "0.15.19"
rootcause = "0.10.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "fs",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "time",
] }
tower = "0.5"
tower-http = { version = "0.6.7", features = ["cors", "request-id", "trace"] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = []
test-util = []